--- a/CurrieTechnologies.Razor.SweetAlert2/package.json
+++ b/CurrieTechnologies.Razor.SweetAlert2/package.json
@@ -1,37 +1,37 @@
 {
   "name": "currietechnologies-razorsweetalert2",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "A Razor class library for interacting with SweetAlert2",
   "scripts": {
     "build": "webpack",
     "build:tsc": "tsc",
     "watch": "webpack --watch",
     "lint": "tslint ./src/*.ts",
-    "prettier:write": "prettier --write ./src/*.ts",
-    "prettier:check": "prettier --check ./src/*.ts"
+    "prettier:write": "prettier --write ./src/ts/*.ts",
+    "prettier:check": "prettier --check ./src/ts/*.ts"
   },
   "devDependencies": {
-    "@types/lodash": "4.14.134",
-    "@types/node": "^12.0.4",
+    "@types/lodash": "^4.14.136",
+    "@types/node": "^12.6.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.0.0",
     "filemanager-webpack-plugin": "^2.0.5",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^1.18.2",
     "sass-loader": "^7.1.0",
     "terser-webpack-plugin": "^1.3.0",
-    "ts-loader": "^6.0.2",
-    "tslint": "^5.17.0",
-    "typescript": "^3.5.1",
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.2"
+    "ts-loader": "^6.0.4",
+    "tslint": "^5.18.0",
+    "typescript": "^3.5.3",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.6"
   },
   "dependencies": {
     "@sweetalert2/themes": "^2.0.3",
-    "lodash": "4.17.11",
-    "sweetalert2": "8.13.3"
+    "lodash": "4.17.14",
+    "sweetalert2": "8.13.5"
   },
   "author": "Michael J. Currie",
   "private": true,
